@@ -1,3 +1,9 @@
+Wed Jul 04 17:24:40 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* docs/introduction.rst,perftest/index_from_dump.py,secore/:
+	  Change all occurrences of unique_id to just "id" - no need to say
+	  the unique bit, so it's just wasted typing.
+
 Mon Jul 02 09:08:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: If a search connection is opened
